feat: Add a gradle plugin
diff --git a/.github/workflows/build.yml b/.github/workflows/build.yml
index 0a47460..8a04822 100644
--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,8 +22,15 @@ jobs:
           distribution: 'temurin'
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@db19848a5fa7950289d3668fb053140cf3028d43 # v3.3.2
+      - name: Publish Gradle Plugin
+        run: |
+          ./publishGradlePlugin.sh
+        env:
+          JUNIT5_ROBOLECTRIC_EXTENSION_GRADLE_PLUGIN_PORTAL_KEY: '${{ secrets.JUNIT5_ROBOLECTRIC_EXTENSION_GRADLE_PLUGIN_PORTAL_KEY }}'
+          JUNIT5_ROBOLECTRIC_EXTENSION_GRADLE_PLUGIN_PORTAL_SECRET: '${{ secrets.JUNIT5_ROBOLECTRIC_EXTENSION_GRADLE_PLUGIN_PORTAL_SECRET }}'
       - name: Build with Gradle Wrapper
-        run: ./gradlew build koverXmlReport publish
+        run: |
+          ./gradlew build koverXmlReport publish
         env:
           JUNIT5_ROBOLECTRIC_EXTENSION_MAVEN_USERNAME: '${{ secrets.JUNIT5_ROBOLECTRIC_EXTENSION_MAVEN_USERNAME }}'
           JUNIT5_ROBOLECTRIC_EXTENSION_MAVEN_PASSWORD: '${{ secrets.JUNIT5_ROBOLECTRIC_EXTENSION_MAVEN_PASSWORD }}'
diff --git a/.idea/gradle.xml b/.idea/gradle.xml
index 9efa103..b91666f 100644
--- a/.idea/gradle.xml
+++ b/.idea/gradle.xml
@@ -26,6 +26,7 @@
             <option value="$PROJECT_DIR$/integration-tests/agp-groovy-dsl" />
             <option value="$PROJECT_DIR$/integration-tests/agp-kotlin-dsl" />
             <option value="$PROJECT_DIR$/robolectric-extension" />
+            <option value="$PROJECT_DIR$/robolectric-extension-gradle-plugin" />
           </set>
         </option>
         <option name="resolveExternalAnnotations" value="false" />
diff --git a/README.md b/README.md
index 2caaf66..c72b713 100644
--- a/README.md
+++ b/README.md
@@ -21,14 +21,25 @@ in-memory environment.

 ## Installation

-1. Add the Maven Central repository to your project's `build.gradle`:
+1. Add the Gradle Plugin Portal and Maven Cent